--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
-    <a class="navbar-brand" id="logo" href="/">CodeOn</a>
+<nav class="navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="navbar-brand" id="logo" href="/">CodeOn</a>
+            <a class="navbar-brand mr" href="/login">Login</a>
+        </li>
         <ul th:if="${#httpServletRequest.requestURI.contains('interview-questions')}" class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" th:href="@{|/users/dashboard|}">Dashboard</a>
@@ -88,6 +93,8 @@
                 </form>
             </li>
         </ul>
+    </ul>
+
     </div>
 </nav>
 </html>
