--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments/header.html :: header(title='Login')"></head>
 <body>
+<nav th:replace="fragments/navbar.html :: navbar"></nav>
 
-<h1>CodeOn</h1>
 <div th:if="${param.error}">
     Invalid Username and Password.
 </div>
