--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -14,9 +14,11 @@
     </h2>
     <div class="container">
         <div class="row">
+            <div class="col-sm">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                trying to get modal working
+                Interview Questions Create
             </button>
+            </div>
             <div class="col-sm">
                 <a th:href="@{|/mentorship-posts/create|}"><button class="btn btn-primary">Mentorship Create</button></a>
             </div>
@@ -38,24 +40,25 @@
             </div>
             <div class="form-group">
             <div class="modal-body">
-                this is where the create post form will go
-<!--                <form th:action="@{/interview-questions/create}" th:method="post" th:object="${post}">-->
-<!--                    Title:-->
-<!--                    <input th:field="*{title}" />-->
-<!--                    <br />-->
-<!--                    Body:-->
-<!--                    <input th:field="*{body}" />-->
-<!--                    <br />-->
-<!--                    Answer:-->
-<!--                    <input th:field="*{answer}" />-->
-<!--                    <br />-->
-<!--                    <input type="hidden" class="" id="postTypeId" name="postTypeId" value="1">-->
-<!--                    <input type="submit" />-->
-<!--                </form>-->
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <form th:action="@{/interview-questions/create}" th:method="post" th:object="${post}">
+                    <div class="form-group">
+                        <label for="title" class="col-form-label">Title:</label>
+                        <input type="text" class="form-control" id="title" th:field="*{title}">
+                    </div>
+                    <div class="form-group">
+                        <label for="body" class="col-form-label">Body:</label>
+                        <input type="text" class="form-control" id="body" th:field="*{body}">
+                    </div>
+                    <div class="form-group">
+                        <label for="answer" class="col-form-label"> Answer:</label>
+                        <input type="text" class="form-control" id="answer" th:field="*{answer}">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-secondary">Save Edits</button>
+                        <input type="hidden" class="" id="postTypeId" name="postTypeId" value="1">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </form>
             </div>
             </div>
         </div>
@@ -63,12 +66,12 @@
     </div>
 </div>
 
-
+<!--This is right above the questions create and takes you to the specific page-->
 <div class="container">
         <div class="row">
             <div class="col-sm">
                 <a th:href="@{|/interview-questions/show|}"><button class="btn btn-primary">Interview Questions</button></a>
-                <a th:href="@{|/interview-questions/create|}"><button class="btn btn-primary">Interview Create</button></a>
+<!--                <a th:href="@{|/interview-questions/create|}"><button class="btn btn-primary">Interview Create</button></a>-->
             </div>
             <div class="col-sm">
                 <a th:href="@{|/mentorship-posts/show|}"><button class="btn btn-primary">Mentorship Posts</button></a>
@@ -79,10 +82,10 @@
                 <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>
             </div>
         </div>
+</div>
 
-
+<!--each of the columns are here for each type of questions-->
 <!--    Interview-->
-    <div class="container">
     <div class="row">
                 <div class="col-sm">
                     <h3>Most Recent Interview Questions</h3>
@@ -174,9 +177,9 @@
                     </div>
                 </div>
     </div>
-    </div>
+
 <!--    End Job-->
-</div>
+
 
 
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
