--- a/src/main/resources/templates/whiteboard-questions/whiteboard.html
+++ b/src/main/resources/templates/whiteboard-questions/whiteboard.html
@@ -26,13 +26,10 @@
     </style>
 </head>
 <body onload="init()">
+<h3>CodeOn Whiteboard Environment. Click "Get Question" to begin.</h3>
+<button class="get-question-button" id="get-question-button">Get Question</button>
 <div id="firepad-container"></div>
-<div th:each="post : ${questionsList}">
-    <input th:id="'question-' + ${post.id}" type="hidden" th:value="${post.body}">
-    <button th:text="'Question' + ${post.id}" class="question-button" th:id="'question-button-' + ${post.id}"></button>
-</div>
 <script type="text/javascript" th:src="@{~/js/keys.js}"></script>
-
 <script>
     let firepad;
     function init() {
@@ -49,16 +46,17 @@
 
         //// Create ACE
         let editor = ace.edit("firepad-container");
-        editor.setTheme("ace/theme/textmate");
+        editor.setTheme("ace/theme/chaos");
         let session = editor.getSession();
         session.setUseWrapMode(true);
         session.setUseWorker(false);
-        session.setMode("ace/mode/javascript");
+        session.setMode("ace/mode/text");
 
         //// Create Firepad.
         firepad = Firepad.fromACE(firepadRef, editor, {
             defaultText: 'Welcome to CodeOn WhiteBoard. Please wait for your facilitator.'
         });
+        firepad.on('ready', refreshRoom);
     }
 
     // Helper to get hash from end of URL or generate a random one.
@@ -76,11 +74,9 @@
         }
         return ref;
     }
-    function loadQuestion() {
+    function getQuestion() {
         firepad.setText("");
-        let id = this.getAttribute("id").split("-")[2];
-        console.log(id);
-        fetch(`/api/questions/${id}`, {
+        fetch(`/api/whiteboard-questions/show-one`, {
             method: 'GET'
         })
             .then(response => {
@@ -91,9 +87,30 @@
                 firepad.setText(res.body);
             })
     }
+    function loadQuestion() {
+        firepad.setText("");
+        let id = this.getAttribute("id").split("-")[2];
+        fetch(`/api/whiteboard-questions/${id}`, {
+            method: 'GET'
+        })
+            .then(response => {
+                return response.json();
+            })
+            .then(res => {
+                console.log(res);
+                firepad.setText(res.body);
+            })
+    }
+    function refreshRoom() {
+        if(location.href.includes("#-M40Al3zn-5wmh_f_lkj") || location.href.includes("#-M40BUW1hibtddE4IqWj") || location.href.includes("#-M40BsnppLXBgzKJOdOl") || location.href.includes("#-M4FMmqvgFrQy9fJzYTj")) {
+            firepad.setText("Welcome.");
+        }
+    }
     document.querySelectorAll(".question-button").forEach(button => {
         button.addEventListener("click", loadQuestion);
-    })
+    });
+    document.querySelector("#get-question-button").addEventListener("click", getQuestion);
+
 
 </script>
 </body>
