--- a/src/main/resources/static/css/landingPage.css
+++ b/src/main/resources/static/css/landingPage.css
@@ -20,7 +20,7 @@ body, html {
 
 #logo{
     font-family: 'Orbitron', sans-serif;
-    color: white;
+    color: #A9ACA9;
     opacity: 0.25;
 }
 /*might need to make som adjustments to this but still early*/
